# Engine

./: .gitignore  README.md  ReadMe.tex  Vagrantfile  project-proposal.tex
project/: .gitignore  CMakeLists.txt
project/common/: ConfigureCompiler.cmake  FindAntTweakBar.cmake  FindAssimp.cmake  FindEigen3.cmake  FindGLEW.cmake  FindGLFW.cmake  FindLeap.cmake  FindOpenGP.cmake  FindSOIL.cmake  common.h  settings.cmake  stringify_shader.cmake
project/source/: CMakeLists.txt  _billboard_fshader.glsl  _billboard_vshader.glsl  _bloom_fshader.glsl  _bloom_vshader.glsl  _blur_fshader.glsl  _buffer_fshader.glsl  _gBuffer_fshader.glsl  _heightmap_fshader.glsl  _heightmap_vshader.glsl  _pass_vshader.glsl  _phong_fshader.glsl  _phong_vshader.glsl  _shadow_fshader.glsl  _shadow_vshader.glsl  _simple_fshader.glsl  _simple_vshader.glsl  _terrain_fshader.glsl  _terrain_shadow_fshader.glsl  _terrain_shadow_vshader.glsl  _terrain_vshader.glsl  _texture_2d_fshader.glsl  _texture_3d_fshader.glsl  _texture_3d_vshader.glsl  _texture_vshader.glsl  _water_fshader.glsl  _water_vshader.glsl  globals.h  main.cpp  view.h
project/source/geometry/: plane_vertical.cpp  plane_vertical.h
project/source/material/: bloom_material.cpp  bloom_material.h  blur_material.cpp  blur_material.h  sun_material.cpp  sun_material.h
project/source/meshes/: Bloom.cpp  Bloom.h  Blur.cpp  Blur.h  Cloud.cpp  Cloud.h  DeferredQuad.cpp  DeferredQuad.h  Displacement.cpp  Displacement.h  Mirror.cpp  Mirror.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  TerrainShadow.cpp  TerrainShadow.h  Water.cpp  Water.h
project/source/scenes/: MainScene.cpp  MainScene.h
project/source/shaders/: bloom_fshader.glsl  bloom_vshader.glsl  blur_fshader.glsl  sun_fshader.glsl  sun_vshader.glsl
project/source/textures/cubemap_clouds/: Thumbs.db
project/source/textures/jajlands1/: Thumbs.db
project/source/textures/skybox/: Thumbs.db
project/source/textures/terrain/: forest.tga  grass.tga  mountain.tga  rock.tga  sand.tga
project/source/textures/water/: wavemap.tga
project/source/threecpp/: Cameras.h  Controllers.h  Events.h  Geometries.h  Lights.h  Materials.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Window.cpp  Window.h
project/source/threecpp/camera/: BufferCamera.cpp  BufferCamera.h  Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
project/source/threecpp/controller/: LeapController.cpp  LeapController.h
project/source/threecpp/event/: Dispatcher.cpp  Dispatcher.h  Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  LeapEvent.cpp  LeapEvent.h  LeapLeftEvent.cpp  LeapLeftEvent.h  MouseEvent.cpp  MouseEvent.h  ResizeEvent.cpp  ResizeEvent.h  UpdateEvent.cpp  UpdateEvent.h  WheelEvent.cpp  WheelEvent.h
project/source/threecpp/geometry/: Bezier.cpp  Bezier.h  BoxGeometry.cpp  BoxGeometry.h  BoxIndicesGeometry.cpp  BoxIndicesGeometry.h  Geometry.cpp  Geometry.h  PlaneGeometry.cpp  PlaneGeometry.h  PlaneVert.cpp  PlaneVert.h  StripBoxGeometry.cpp  StripBoxGeometry.h  Surface.cpp  Surface.h
project/source/threecpp/light/: DirectedLight.cpp  DirectedLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
project/source/threecpp/material/: BillboardMaterial.cpp  BillboardMaterial.h  Material.cpp  Material.h  PhongMaterial.cpp  PhongMaterial.h  StaticMaterial.cpp  StaticMaterial.h  TextureMaterial.cpp  TextureMaterial.h
